# RatioCalc

./: .gitignore  LICENSE  MANIFEST.in  README.md  activity_ratios.py  example_usage.py  financial_ratios.py  liquidity_ratios.py  main.py  market_ratios.py  profitability_ratios.py  pyproject.toml  requirements.txt  setup.py  solvency_ratios.py  yahoo_finance_fetcher.py
.github/: copilot-instructions.md
.github/chatmodes/: Brainstorm.chatmode.md  Python.chatmode.md  Search.chatmode.md
docs/: Defensive Interval Ratio.md  ratios.md
ratio_calc/: __init__.py  calculator.py  liquidity_ratios.py  market_ratios.py  profitability_ratios.py  solvency_ratios.py
