[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratio-calc"
version = "1.1.0"
description = "A comprehensive financial ratios calculator for Yahoo Finance data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "srinidhim3", email = "your.email@example.com"},
]
maintainers = [
    {name = "srinidhim3", email = "your.email@example.com"},
]
keywords = ["finance", "ratios", "yahoo-finance", "analysis", "cfa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=1.3.0",
    "yfinance>=0.1.70",
]

[project.urls]
Homepage = "https://github.com/srinidhim3/RatioCalc"
Repository = "https://github.com/srinidhim3/RatioCalc"
Issues = "https://github.com/srinidhim3/RatioCalc/issues"
Documentation = "https://github.com/srinidhim3/RatioCalc#readme"

[project.scripts]
ratio-calc = "ratio_calc.calculator:main"

[tool.setuptools]
packages = ["ratio_calc"]
include-package-data = true

[tool.setuptools.package-data]
ratio_calc = ["docs/*.md"]